Frontend Dashboard and Profile Page

--- a/orgme-frontend/src/App.css
+++ b/orgme-frontend/src/App.css
@@ -33,7 +33,8 @@ body {
 
 .signup-form,
 .login-form,
-.forgot-password-form {
+.forgot-password-form,
+.form {
   padding: 30px;
   border-radius: 32px;
   background-color: var(--secondary);
@@ -194,7 +195,7 @@ body {
 }
 
 .header-icon {
-  width: 100px;
+  width: 20%;
   height: 100px;
   background-color: var(--secondary);
   border-radius: 10px;
@@ -285,6 +286,23 @@ body {
   margin-left: 20%;
 }
 
+.new-task-button {
+  background-color: var(--secondary);
+  border: 1px solid var(--accent1);
+  color: var(--accent1);
+  height: 40px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-weight: 700;
+}
+
+.new-task-button:hover {
+  background-color: var(--accent1);
+  color: var(--primary);
+  border: 1px solid var(--accent1);
+}
+
 /* Filter Form Component Styles */
 .filter-form {
   display: flex;
@@ -313,7 +331,8 @@ body {
   margin-bottom: 5px;
 }
 
-.filter-form-group select {
+.filter-form-group select,
+.form-select {
   padding: 10px;
   border: 1px solid var(--accent2);
   border-radius: 5px;
@@ -321,12 +340,14 @@ body {
   color: var(--accent1);
 }
 
-.filter-form-group select:focus {
+.filter-form-group select:focus,
+.form-select:focus {
   outline: none;
   border: 1px solid var(--accent1);
 }
 
-.filter-form-group select::placeholder {
+.filter-form-group select::placeholder,
+.form-select::placeholder {
   color: var(--accent2);
 }
 
@@ -345,4 +366,103 @@ body {
   background-color: var(--secondary);
   color: var(--accent1);
   border: 1px solid var(--accent1);
+}
+
+/* Modal Styles */
+.modal {
+  position: fixed;
+  z-index: 1;
+  padding-top: 50px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  align-self: center;
+}
+
+.update-form-buttons {
+  display: flex;
+}
+
+.update-form {
+  text-align: left;
+}
+
+.update-form h2 {
+  text-align: center;
+}
+
+.update-form-buttons button {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+/* Profile Page Component Styles */
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: var(--primary);
+}
+
+.profile-card {
+  background-color: var(--secondary);
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+  color: var(--accent2);
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+  width: 40%;
+}
+
+.profile-image {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.profile-avatar {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  background-color: var(--secondary);
+  padding: 10px;
+  border: 2px solid var(--accent2);
+}
+
+.profile-name {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.profile-details p {
+  margin: 20px 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.highlight {
+  color: var(--accent1);
+}
+
+.profile-button {
+  background-color: var(--secondary);
+  color: var(--accent1);
+  padding: 12px;
+  margin-top: 20px;
+  border: 1px solid var(--accent1);
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.profile-button:hover {
+  background-color: var(--accent1);
+  color: var(--primary);
 }
